2010-08-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/lob.c: fix memory leak when temporary
	    lobs are used.

2010-08-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix a bug that a string is bound to RAW.
	    Its encoding had been convertd to OCI.encoding incorrectly.
	    (backport from the trunk)
	* ext/oci8/stmt.c: fix SEGV when an exception is raised while
	    a bind value is deallocated.
	    (backport from the trunk)

2010-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oranumber_util.c, test/test_oranumber.rb:
	    add limitted support for OraNumber's positive and negative
	    infinity. They are converted to '~' and '-~' respectively
	    as described in <URL:http://www.ixora.com.au/notes/infinity.htm>.

2010-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: fix wrong dependencies in Makefile when running
	    'make -jNNN (where NNN >= 2)'
	    (contributed by Alyano Alyanos. See bug #28129 on rubyforge.)

2010-03-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: fix to compile on HP-UX.
	    Duplicate const qualifiers prevented HP-UX cc from compiling.
	    (reported by Sebastian YEPES)

2010-02-28  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.3 and 2.0.4.
	* VERSION: change the version to 2.0.3.
	* ext/oci8/stmt.c: fix segmentation fault when OCI8::Cursor#fetch
	    is called prior to OCI8::Cursor#exec.
	* ext/oci8/oci8.c: minor fix in rdoc comment.

2010-02-27  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/datetime.rb: fix a problem that fractional seconds are lost
	    when Time value is bound to TIMESTAMP.
	    (reported by Raimonds Simanovskis)

2010-02-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.h: fix for
	    old Oracle versions, which lack declarations of OCIMsg, oraub8,
	    orasb8 and OCI_DURATION_PROCESS.
	* ext/oci8/ocihandle.c: fix for mingw compiler.

2010-02-27  KUBO Takehiro  <kubo@jiubao.org>